--- a/server/ui/src/less/main.less
+++ b/server/ui/src/less/main.less
@@ -5,6 +5,7 @@
 
 //colors
 @dp-grey-light: #DFDFDF;
+@dp-bg-color: white;
 
 /**
  * Global Elements
@@ -24,6 +25,22 @@
 	}	
 }
 
+.hr-text {
+	height: 1px;
+	background-color: @dp-grey-light;
+	padding-left: 10px;
+	margin-top: 20px;
+
+	& > h3, span {
+		display: inline;
+		padding: 0 5px 0 5px;
+		margin: 0;
+		background-color: @dp-bg-color;
+		position: relative;
+		top: -0.7em;
+	}
+}
+
 .dp-panel() {
 	h2 {
 		margin: 0;
@@ -32,7 +49,7 @@
 		button.dp-add:extend(.btn, .btn-default) {
 			position: absolute;
 			right: 10px;
-
+			font-size: 0.6em;
 		}
 	}
 }
@@ -40,9 +57,11 @@
 /**
  * Dashboard specific
  */
-@dp-dep-panel-width: 228px;
+@dp-dep-panel-width: 300px;
 
 section#dp-dashboard {	
+	
+	//dependency panel
 	#dp-dep-panel {
 		.dp-panel();
 		position: fixed;
@@ -51,8 +70,38 @@ section#dp-dashboard {
 		bottom: 0px;
 		width: @dp-dep-panel-width;
 		border: 1px solid @dp-grey-light;
+
+		.hr-text {
+			button {
+				float: right;
+				font-size: 0.8em;
+				margin-top: -10px;
+			}
+		}
+
+		ul#dp-dep-list {
+			list-style: none;
+			padding: 0;
+			margin: 40px 0 0 0;
+
+
+			a.add-state-btn{
+				margin-left: 30px;
+			}
+
+			ul.dp-state-list {
+				margin: 20px 0 0 20px;
+				padding-left: 20px;
+				list-style: square;
+				button {
+					float: right;
+					font-size: 0.8em;
+				}
+			}
+		}
 	}
 
+	//isolation panel
 	#dp-iso-panel {
 		.dp-panel();
 		position: relative;
@@ -62,5 +111,26 @@ section#dp-dashboard {
 			position: absolute;
 			width: 100%;
 		}
+
+		ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+			li {
+				&.selected{
+					border-width: 2px;
+				}
+
+				margin: 20px 20px 0px 20px;
+				border: 1px solid @dp-grey-light;
+
+				h3 {
+					padding: 5px;
+					margin: 0 0 0 0;
+					border-bottom: 1px solid @dp-grey-light;
+				}
+			}
+		}
+
 	}
 }
